   (showhost.cgi) and data for every host (showservice.cgi) will be
   displayed.  use the hostdb and servdb files to filter graphs and
   control the order in which graphs are shown.
* started refactoring of code to eliminate redundant trips to disk for 
   host/service/dataset listings and to enable pattern matching in
   the *db.conf files.
* contents of README.map are now in INSTALL

1.4.1 2010-02-18

* gave up on hiding data set selector after much (futile) javascript wrangling
* added date/time picker for specifying arbitrary end date
* showgraph.cgi accepts period (which is overridden by any rrdopts)
* use button instead of toggle to show/hide graph controls (keeps ie8 happy)
* fixed prev/next behavior
* added instructions and javascript for doing graphs on mouseovers in nagios
* rrdopts from config are now respected by showgraph.cgi
* added sans-serif to css to keep (many) unix clients happy
* fixed alignment of graph labels
* eliminate vestigial 'graph' CGI option.
* labels for services and data sets are now implemented throughout all cgi
   scripts.  the first place to define them is nagiosgraph.conf.  labels
   can be further specialized by defining them in hostdb.conf and
   groupdb.conf files.
* added mechanism to define default subset of datasets per service.
* added format strings for dates and times
* fixed showservice.cgi so that it now requires only host names in the 
   servdb.conf file.
* made parsing and handling of *db.conf files more consistent
* the *db.conf files now include detailed comments about file format
* comment character in *db.conf file must be at beginning of line in order
   to be treated as comment.
* added showgroup.cgi to display arbitrary groups of host/service/dataset.
   group definitions go in groupdb.conf.
* major overhaul of the javascript.  state is managed better now, and a lot
   of redundant code was removed.  there are more functions now, but the
   functions are more precise with fewer side effects.